fixed issue with too wide site

--- a/src/main/app/src/_app.scss
+++ b/src/main/app/src/_app.scss
@@ -1,6 +1,4 @@
 #urchin {
-  height: 100vh;
-  width: 100vw;
   margin: 0;
   padding: 4.5rem 0 0;
 }
