--- a/src/main/app/src/component/users/_users.scss
+++ b/src/main/app/src/component/users/_users.scss
@@ -2,11 +2,11 @@
 
   .user-list {
     @extend .list-group;
-    display: inline-block;
   }
 
   .user-list__user {
     @extend .list-group-item;
+    border: 0;
   }
 
 }
